bpo-30367: fix _testcapi to work when statically linked into Cpython3